@@ -1,3 +1,7 @@
+2003-06-22  James M. Cape  <jcape@ignore-your.tv>
+
+	* gconf/gconf-database.c: Fix for GCC 3.3 warning (fixes #115722).
+
 2003-06-18	Mohammad DAMT  <mdamt@bisnisweb.com>
 
 	* po/id.po: Added Indonesian translation
